# ComfyUI_Ideogram_Image_and_Text_Tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md
docs/nodes/: alphaprep.md  assetpackexport.md  logoassetbuilder.md  stickersheetbuilder.md  thumbnaillegibilitycheck.md  wordmarkgenerator.md
examples/: README.md  alphaprep_basic.json  assetpackexport_basic.json  logoassetbuilder_basic.json  stickersheet_basic.json  thumbnaillegibilitycheck_basic.json  wordmark_basic.json
nodes/: __init__.py  _image_utils.py  alpha_prep.py  asset_pack_export.py  logo_asset_builder.py  sticker_sheet.py  thumbnail_legibility_check.py  wordmark.py
tests/: test_alpha_prep.py  test_asset_pack_export.py  test_examples.py  test_image_utils.py  test_logo_asset_builder.py  test_package.py  test_sticker_sheet.py  test_thumbnail_legibility_check.py  test_wordmark.py  test_workflow_templates.py
workflows/: 01_sticker_prep_pipeline.json  02_sticker_sheet_from_three_logos.json  03_full_brand_kit_from_one_logo.json  README.md
